--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body class="page">
     <header class="header decorated-zone">
-      <div class="header__decoration" aria-hidden="true">rec</div>
+      <span class="header__decoration" aria-hidden="true">rec</span>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -55,7 +55,7 @@
             <p class="content__list-text">
               Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует.
               Исследователи
-              <a class="content__list-link">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин —
+              <a class="content__list-link"  href="https://dana.org/article/multicosts-of-multitasking/" target="_blank">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин —
               «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
             </p>
           </li>
@@ -105,11 +105,11 @@
       </section>
       <section class="content__article content__article-column-order">
         <h2 class="content__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+        <h3 class="content__list-title title-decor">
+          5 простых (на самом деле не очень) советов
+        </h3>
         <ul class="content__list content__list-uniq-order">
           <li class="content__list-item">
-            <h3 class="content__list-title title-decor">
-              5 простых (на самом деле не очень) советов
-            </h3>
             <h4 class="content__list-subtitle title-decor">Представьте небо и облака</h4>
             <p class="content__list-text">
               Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить,
@@ -127,7 +127,7 @@
           <li class="content__list-item">
             <h4 class="content__list-subtitle title-decor">Прогуляйтесь</h4>
             <p class="content__list-text">
-              Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="content__list-link">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот
+              Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="content__list-link" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" target="_blank">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот
               понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
             </p>
           </li>
@@ -148,30 +148,30 @@
         </ul>
       </section>
       <section class="content__images">
-        <h3 class="content__list-title title-decor content__list-title-letter-space">
+        <h3 class="content__list-title title-decor">
           А можно в картинках?
         </h3>
         <ul class="content__gallery">
-          <li class="content__image--1">
+          <li class="content__gallery-item">
             <img class="content__image" src="./images/sunset.png" alt="закат на фоне гор" />
           </li>
-          <li class="content__image--2">
+          <li class="content__gallery-item">
             <img class="content__image" src="./images/ice-cream.png" alt="миска с мороженым" />
           </li>
-          <li class="content__image--3">
+          <li class="content__gallery-item">
             <img class="content__image" src="./images/tape.png" alt="аудиокассета с курсором" />
           </li>
-          <li class="content__image--4">
+          <li class="content__gallery-item">
             <img class="content__image" src="./images/books.png" alt="стопка книг" />
           </li>
-          <li class="content__image--5">
+          <li class="content__gallery-item">
             <img class="content__image" src="./images/street.png" alt="вид на улицу через дорогу" />
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer decorated-zone">
-      <h5 class="footer__title">focus</h5>
+      <h2 class="footer__title">focus</h2>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
