--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="icon" href="./images/favicon.ico" sizes="any" />
     <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="./images/mobile-icon.png" />
-    <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
+    <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/dark.css" />
     <link rel="stylesheet" href="./styles/light.css" />
@@ -55,8 +55,8 @@
             <p class="content__list-text">
               Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует.
               Исследователи
-              <a class="content__list-link"  href="https://dana.org/article/multicosts-of-multitasking/" target="_blank">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин —
-              «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
+              <a class="content__list-link" href="https://dana.org/article/multicosts-of-multitasking/" target="_blank">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает
+              несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
             </p>
           </li>
           <li class="content__list-item">
@@ -105,47 +105,50 @@
       </section>
       <section class="content__article content__article-column-order">
         <h2 class="content__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
-        <h3 class="content__list-title title-decor">
-          5 простых (на самом деле не очень) советов
-        </h3>
-        <ul class="content__list content__list-uniq-order">
-          <li class="content__list-item">
-            <h4 class="content__list-subtitle title-decor">Представьте небо и облака</h4>
-            <p class="content__list-text">
-              Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить,
-              что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о
-              потенциальных проблемах из будущего.
-            </p>
-          </li>
-          <li class="content__list-item">
-            <h4 class="content__list-subtitle title-decor">Включите музыку</h4>
-            <p class="content__list-text">
-              Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым
-              шумом» или нейромузыкой.
-            </p>
-          </li>
-          <li class="content__list-item">
-            <h4 class="content__list-subtitle title-decor">Прогуляйтесь</h4>
-            <p class="content__list-text">
-              Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="content__list-link" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" target="_blank">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот
-              понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
-            </p>
-          </li>
-          <li class="content__list-item">
-            <h4 class="content__list-subtitle title-decor">Хорошо ешьте</h4>
-            <p class="content__list-text">
-              Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб
-              из цельнозерновой пшеницы.
-            </p>
-          </li>
-          <li class="content__list-item">
-            <h4 class="content__list-subtitle title-decor">Читайте</h4>
-            <p class="content__list-text">
-              Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует
-              направленное внимание.
-            </p>
-          </li>
-        </ul>
+        <span class="content__list-uniq-order">
+          <h3 class="content__list-title title-decor">
+            5 простых (на самом деле не очень) советов
+          </h3>
+          <ul class="content__list">
+            <li class="content__list-item">
+              <h4 class="content__list-subtitle title-decor">Представьте небо и облака</h4>
+              <p class="content__list-text">
+                Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и
+                представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не
+                волноваться о потенциальных проблемах из будущего.
+              </p>
+            </li>
+            <li class="content__list-item">
+              <h4 class="content__list-subtitle title-decor">Включите музыку</h4>
+              <p class="content__list-text">
+                Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в
+                «белым шумом» или нейромузыкой.
+              </p>
+            </li>
+            <li class="content__list-item">
+              <h4 class="content__list-subtitle title-decor">Прогуляйтесь</h4>
+              <p class="content__list-text">
+                Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a class="content__list-link" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" target="_blank">показал</a>, что созерцание
+                природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет
+                лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
+              </p>
+            </li>
+            <li class="content__list-item">
+              <h4 class="content__list-subtitle title-decor">Хорошо ешьте</h4>
+              <p class="content__list-text">
+                Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис,
+                хлеб из цельнозерновой пшеницы.
+              </p>
+            </li>
+            <li class="content__list-item">
+              <h4 class="content__list-subtitle title-decor">Читайте</h4>
+              <p class="content__list-text">
+                Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует
+                направленное внимание.
+              </p>
+            </li>
+          </ul>
+        </span>
       </section>
       <section class="content__images">
         <h3 class="content__list-title title-decor">
