Add changes after autotest

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </section>
       <section class="content__article content__article-column-order">
         <h2 class="content__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
-        <span class="content__list-uniq-order">
+        <div class="content__list-uniq-order">
           <h3 class="content__list-title title-decor">
             5 простых (на самом деле не очень) советов
           </h3>
@@ -148,7 +148,7 @@
               </p>
             </li>
           </ul>
-        </span>
+        </div>
       </section>
       <section class="content__images">
         <h3 class="content__list-title title-decor">
