Add changes after 3nd review

--- a/index.html
+++ b/index.html
@@ -156,19 +156,19 @@
         </h3>
         <ul class="content__gallery">
           <li class="content__gallery-item">
-            <img class="content__image" src="./images/sunset.png" alt="закат на фоне гор" />
+            <img class="content__image" src="./images/sunset.png" alt="закат на фоне гор" loading="lazy"/>
           </li>
           <li class="content__gallery-item">
-            <img class="content__image" src="./images/ice-cream.png" alt="миска с мороженым" />
+            <img class="content__image" src="./images/ice-cream.png" alt="миска с мороженым" loading="lazy"/>
           </li>
           <li class="content__gallery-item">
-            <img class="content__image" src="./images/tape.png" alt="аудиокассета с курсором" />
+            <img class="content__image" src="./images/tape.png" alt="аудиокассета с курсором" loading="lazy"/>
           </li>
           <li class="content__gallery-item">
-            <img class="content__image" src="./images/books.png" alt="стопка книг" />
+            <img class="content__image" src="./images/books.png" alt="стопка книг" loading="lazy"/>
           </li>
           <li class="content__gallery-item">
-            <img class="content__image" src="./images/street.png" alt="вид на улицу через дорогу" />
+            <img class="content__image" src="./images/street.png" alt="вид на улицу через дорогу" loading="lazy"/>
           </li>
         </ul>
       </section>
